--- a/Demonis:4.5
+++ b/Demonis:4.5
@@ -8,7 +8,7 @@
 
     Duration = 16;
 
-local Library = loadstring(game:HttpGet('https://raw.githubusercontent.com/xHeptc/Kavo-UI-Library/main/source.lua'))()
+local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/xHeptc/Kavo-UI-Library/main/source.lua"))()
 
 local Window = Library.CreateLib("DEMONIS", "Synapse")
 
@@ -18,7 +18,7 @@ local Section = Tab:NewSection("Main")
 
 Section:NewButton("Fly", "A simple fly command, press 'E' to toggle.", function()
 
-loadstring(game:HttpGet('https://raw.githubusercontent.com/TR011F4C3/PANDA/main/scripts/fly.lua', true))()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/TR011F4C3/PANDA/main/scripts/fly.lua", true))()
 
 end)
 
@@ -168,7 +168,7 @@ local Section = Tab:NewSection("Rake")
 
 Section:NewButton("Infinite Yield", "Launches Infinite Yield.", function()
 
-    loadstring(game:HttpGet('https://raw.githubusercontent.com/EdgeIY/infiniteyield/master/source', true))()
+    loadstring(game:HttpGet("https://raw.githubusercontent.com/EdgeIY/infiniteyield/master/source", true))()
 
 end)
 
@@ -194,7 +194,7 @@ end)
 
 Section:NewButton("PLAYERS ESP", "esp", function()
 
-loadstring(game:HttpGet('https://raw.githubusercontent.com/JEXBLUK/JEXBLUK-TEAM/main/ESP%20PLAYERS'))()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/JEXBLUK/JEXBLUK-TEAM/main/ESP%20PLAYERS"))()
 
 end)
 
@@ -206,31 +206,31 @@ end)
 local Section = Tab:NewSection("Ability wars")
 
 Section:NewButton("AW1", "Discover more things", function()
-loadstring(game:HttpGet('https://paste.ee/r/Wo5Kj'))()
+loadstring(game:HttpGet("https://paste.ee/r/Wo5Kj"))()
 end)
 
 local Section = Tab:NewSection("Ro-Ghoul")
 
 Section:NewButton("RG1", "Discover more things", function()
-loadstring(game:HttpGet('https://raw.githubusercontent.com/xQuartyx/DonateMe/main/ScriptLoader')()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/xQuartyx/DonateMe/main/ScriptLoader")()
 end)
 
 local Section = Tab:NewSection("FurryInfec")
 
 Section:NewButton("HVH Gui", "Instant kill", function()
 
-loadstring(game:HttpGetAsync('https://raw.githubusercontent.com/JEXBLUK-TEAM/Scripts/main/HvH%20Script'))()
+loadstring(game:HttpGet("https://github.com/JEXBLUK-TEAM/Testings/blob/main/HvH%20Script"))()
 end)
 
 local Section = Tab:NewSection("BLOX FRUITS")
 
 Section:NewButton("HoHoHub", "Op Farm", function()
 _G.HohoVersion = "v3"
-loadstring(game:HttpGet('https://raw.githubusercontent.com/acsu123/HOHO_H/main/Loading_UI'))()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/acsu123/HOHO_H/main/Loading_UI"))()
 end)
 
 Section:NewButton("Kay-Bloxfruits", "Cool Farm", function()
-loadstring(game:HttpGet('https://raw.githubusercontent.com/AXCScript/KayMobile/main/Script-Loader'))()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/AXCScript/KayMobile/main/Script-Loader"))()
 end)
 
 
@@ -244,12 +244,12 @@ Section:NewButton("Harshtech", "Discover more things", function()
 -- Owner: YellowGreg#7993
 -- Discord: https://discord.gg/MzeSqBBpCh
 
-loadstring(game:HttpGet('https://raw.githubusercontent.com/YellowGreg/Loadstring/main/HarshTechV7.6-Pc-Or-Mobile.lua'))()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/YellowGreg/Loadstring/main/HarshTechV7.6-Pc-Or-Mobile.lua"))()
 
 
 end)
 
 Section:NewButton("SimpleSpy", "Discover more things", function()
 
-loadstring(game:HttpGetAsync('https://raw.githubusercontent.com/78n/SimpleSpy/main/SimpleSpyBeta.lua'))()
+loadstring(game:HttpGet("https://raw.githubusercontent.com/78n/SimpleSpy/main/SimpleSpyBeta.lua"))()
 end)
